<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.login.SignUpActivity">

    <RelativeLayout
        android:id="@+id/topLayout"
        android:background="@drawable/my_gradient_drawable"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

   <ImageView
       android:id="@+id/ivBack"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/this_is_an_image"
    android:src="@drawable/back"
    android:layout_marginTop="25dp"
    android:layout_marginStart="15dp"
    />

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/white"
            android:textSize="22sp"
            />

    </RelativeLayout>

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/name"
        android:fontFamily="@font/open_sans_regular"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="4dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:fontFamily="@font/open_sans_regular"
        android:importantForAutofill="no" />

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/email"
        android:fontFamily="@font/open_sans_regular"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="4dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:fontFamily="@font/open_sans_regular"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/password"
        android:fontFamily="@font/open_sans_regular"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:fontFamily="@font/open_sans_regular"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/register"
        android:textAllCaps="false"
        android:background="@drawable/button_bg"
        android:textColor="@color/white" />


</LinearLayout>

</layout>