<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/topLayout"
            android:background="@drawable/my_gradient_drawable"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="@color/white"
                android:textSize="22sp"
                 />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/topLayout"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/email"
                android:fontFamily="@font/open_sans_regular"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="4dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:fontFamily="@font/open_sans_regular" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/password"
                android:fontFamily="@font/open_sans_regular"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="4dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:fontFamily="@font/open_sans_regular"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/continue_"
                android:textAllCaps="false"
                android:background="@drawable/button_bg"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginTop="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/open_sans_regular"
                    android:textColor="#A6000000"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/primaryColor"
                    android:textSize="13sp"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>